--- a/Assignment.html
+++ b/Assignment.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> Write title here.> </title>
+		<title>THE MAGIC IN THIS WORLD</title>
 		<meta charset="utf=8">
 	</head>
 	<body>
-		THIS IS WHERE ALL THE CONTENT ON THE WEBPAGE GOES
+	<p> You don't have to be a witch to find the magic in this world. </p>
+	<h1> but let me tell you something... </h1>
+	<h3> It does help. </h3>
+	<h6> (It really does) </h6>
 	</body>
 </html>
