--- a/Assignment.html
+++ b/Assignment.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>THE MAGIC IN THIS WORLD</title>
+		<title>Dogs!</title>
 		<meta charset="utf=8">
 	</head>
 	<body>
-	<p> You don't have to be a witch to find the magic in this world. </p>
-	<h1> but let me tell you something... </h1>
-	<h3> It does help. </h3>
-	<h6> (It really does) </h6>
+		<main>
+			<p> Dogs are our best friends. </p>
+			<p>Roger Caras one day said:
+				<blockquote> "Dogs are not our whole life, 
+								but they make our lives whole"</blockquote>
+			</p>
+		<main>
+		<img src="C:\Users\victo\Desktop\Website\Images\Dog Picture.jpeg">
+		<p> Roger Caras one day said:
+		<blockquote> "Dogs are not our whole life, 
+								but they make our lives whole"</blockquote>
+		</p>
+		<a href="Dog.html">Dog Image</a> 
+		<p> If you don't like that, check this one out.</p>
+		<iframe width="787" height="443" src="https://www.youtube.com/embed/PZnPjTLmIik" title="Funny Dogs And Cats Videos 2024 😅 - Best Funniest Animal Videos Of The week #15" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<p><p/>
+		<a href="https://media.tenor.com/tCionxpvCxsAAAAM/dog-doggy.gif">Dog Image 2</a> 
+		<nav>
+			<a href="Assignment.html">Home</a>	
+			<a href="Dog.html">Dog Image</a>
+			<a href="Dog_Video.html">Dog Video</a>
+		</nav>
+	<footer>
+	</footer>
 	</body>
 </html>
