--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -31,7 +31,7 @@
     
     <!--BACKGROUND-->
     <div  id="background">
-    <h4>Backround</h4>
+    <h4>Backrgound</h4>
     <hr>
     <p>In 1816, the United Provinces of the Río de la Plata declared their independence from Spain. After Bolivia, Paraguay, and Uruguay went their separate ways, the area that remained became Argentina. European immigrants heavily shaped the country's population and culture, with Italy and Spain providing the largest percentage of newcomers from 1860 to 1930. Until about the mid-20th century, much of Argentina's history was dominated by periods of internal political unrest and conflict between civilian and military factions.</p>
     <p>
