PET-SHOP WEBSITE GITHUB SUBMISSION ASSIGNMENT

--- a/The-Pet-Shop-Website/contact.html
+++ b/The-Pet-Shop-Website/contact.html
@@ -7,10 +7,13 @@
         <meta name="keywords" content="HTML">
         <meta name="Victoria McCabe" content="The Pet Shop">
         <meta name="description" content="This webpage offers the possibility for viewers to contact The Pet Shop">
+    
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/x-icon" href="C:\Users\victo\OneDrive\Documents\HTML-AND-CSS-PROJECTS\The-Pet-Shop-Website\Favicon-72x72.png">
     </head>
     <body>
         <!--NAVBAR-->
-        <nav>
+        <nav class="nav-bar">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
@@ -19,17 +22,17 @@
         <!--HEADER-->
         <header>
             <div>
-                <h1>Contact Us!</h1>
+                <h1 class="animate-text">Contact Us!</h1>
             </div>
         </header>
         <!--FORM-->
         <section>
-            <h3>Please provide your contact information and a brief message of your inquiry.</h3>
+            <h3 id="contact-h3">Please provide your contact information and a brief message of your inquiry.</h3>
             <div>
                 <form>
                     <input type="text" placeholder="First Name">
                     <input type="text" placeholder="Last Name"><br>
-                    <input type="email" placeholder="Email"><br>
+                    <input type="email" placeholder="Email">
                     <input type="tel" placeholder="Phone Number"><br>
                     <input type="checkbox" id="Newsletter">
                     <label for="Newsletter">Would you like to receive our monthly newsletter?</label><br>
