--- a/Basic_HTML_and_CSS/Simple-Recipes/index.html
+++ b/Basic_HTML_and_CSS/Simple-Recipes/index.html
@@ -24,6 +24,7 @@
                     <a href="#dessert">Dessert</a>
                 </div>
             </li>
+            <li><a href="#about">About us</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -206,6 +207,30 @@
             </div>
         </div>
     </section>
+
+    <!--ABOUT US---------------------------------------------------------------------------------------------------------->
+        <div id="about">
+            <h2>About Us</h2>
+        </div>
+        <div class="abut-us-text">
+            <p>Simple Recipes is your ultimate destination for easy-to-follow recipes that make
+                cooking enjoyable for everyone, whether you're a seasoned chef or a beginner. Founded in the United
+                States
+                out of a passion for home cooking, our mission is to inspire and empower you to create delicious meals
+                with
+                everyday ingredients and simple techniques. We offer a wide range of diverse cuisines, from classic
+                comfort
+                foods to international dishes, all accompanied by step-by-step instructions and helpful tips to ensure
+                your
+                cooking experience is smooth and successful. Our dedicated team of home cooks and food enthusiasts
+                meticulously test each recipe, so you can cook with confidence. At Simple Recipes, we believe that good
+                food
+                brings people together, and we're excited to have you join our community. Let’s cook up something
+                amazing
+                together!</p>
+    </div>
+
+
 
     <!--CONTACT FORM------------------------------------------------------------------------------------------------------>
     <section>
