--- a/Basic_HTML_and_CSS/Simple-Recipes/index.html
+++ b/Basic_HTML_and_CSS/Simple-Recipes/index.html
@@ -210,10 +210,10 @@
 
     <!--ABOUT US---------------------------------------------------------------------------------------------------------->
         <div id="about">
-            <h2>About Us</h2>
+            <h2 id="about-us-h2">About Us</h2>
         </div>
-        <div class="abut-us-text">
-            <p>Simple Recipes is your ultimate destination for easy-to-follow recipes that make
+        <div class="about-us-text">
+            <p id="about-us">Simple Recipes is your ultimate destination for easy-to-follow recipes that make
                 cooking enjoyable for everyone, whether you're a seasoned chef or a beginner. Founded in the United
                 States
                 out of a passion for home cooking, our mission is to inspire and empower you to create delicious meals
@@ -225,9 +225,16 @@
                 cooking experience is smooth and successful. Our dedicated team of home cooks and food enthusiasts
                 meticulously test each recipe, so you can cook with confidence. At Simple Recipes, we believe that good
                 food
-                brings people together, and we're excited to have you join our community. Let’s cook up something
+                brings people together, and we're excited to have you join our community. 
+                <br>
+                <br>
+                Let’s cook up something
                 amazing
-                together!</p>
+                together!
+                <br>
+                <br>
+                ♥
+            </p>
     </div>
 
 
