--- a/Basic_HTML_and_CSS/Simple-Recipes/index.html
+++ b/Basic_HTML_and_CSS/Simple-Recipes/index.html
@@ -79,7 +79,7 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>20 - 30 minutes</p>
                                 <h4>Level:</h4>
@@ -102,7 +102,7 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>20 - 30 minutes</p>
                                 <h4>Level:</h4>
@@ -125,11 +125,11 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>20 - 30 minutes</p>
                                 <h4>Level:</h4>
-                                <p>Medium</p>
+                                <p>medium</p>
                                 <input type="button" value="Recipe">
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>40 - 50 minutes</p>
                                 <h4>Level:</h4>
@@ -171,7 +171,7 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>30 - 40 minutes</p>
                                 <h4>Level:</h4>
@@ -194,7 +194,7 @@
                         </div>
                         <!--BACK-->
                         <div class="flip-back">
-                            <div calss="text-container">
+                            <div class="text-container">
                                 <h4>Prep Time:</h4>
                                 <p>50 - 60 minutes</p>
                                 <h4>Level:</h4>
