--- a/Academy-Cinemas/index.html
+++ b/Academy-Cinemas/index.html
@@ -295,6 +295,8 @@
             </footer>
         </div>
     </section>
+    <!--JQuery link for mobile menu collapse and van shrink and scroll-->
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
